--- a/BE/settings.json
+++ b/BE/settings.json
@@ -422,7 +422,7 @@
             "name": "모두 줍기",
             "order": 3,
             "created_at": "2024-11-26T07:26:14.878748",
-            "updated_at": "2024-11-26T07:53:04.270079",
+            "updated_at": "2024-11-26T08:04:51.686619",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "오른쪽 쉬프트",
@@ -433,28 +433,64 @@
             "repeat_count": 1,
             "items": [
                 {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0초",
-                    "duration": 0.0,
+                    "content": "키 입력: 왼쪽 쉬프트 --- 누르기",
                     "order": 1
                 },
                 {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0초",
-                    "duration": 0.0,
+                    "content": "지연시간 : 0.016초",
                     "order": 2
                 },
                 {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0초",
-                    "duration": 0.0,
+                    "content": "키 입력: X --- 누르기",
                     "order": 3
                 },
                 {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0초",
-                    "duration": 0.0,
+                    "content": "지연시간 : 0.016초",
                     "order": 4
+                },
+                {
+                    "content": "키 입력: X --- 떼기",
+                    "order": 5
+                },
+                {
+                    "content": "지연시간 : 0.016초",
+                    "order": 6
+                },
+                {
+                    "content": "키 입력: Y --- 누르기",
+                    "order": 7
+                },
+                {
+                    "content": "지연시간 : 0.016초",
+                    "order": 8
+                },
+                {
+                    "content": "키 입력: Y --- 떼기",
+                    "order": 9
+                },
+                {
+                    "content": "지연시간 : 0.016초",
+                    "order": 10
+                },
+                {
+                    "content": "키 입력: Z --- 누르기",
+                    "order": 11
+                },
+                {
+                    "content": "지연시간 : 0.016초",
+                    "order": 12
+                },
+                {
+                    "content": "키 입력: Z --- 떼기",
+                    "order": 13
+                },
+                {
+                    "content": "지연시간 : 0.016초",
+                    "order": 14
+                },
+                {
+                    "content": "키 입력: 왼쪽 쉬프트 --- 떼기",
+                    "order": 15
                 }
             ]
         }
